--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@ div#main {
 	<div id="main"><iframe id="bgFrame" src="./background.html"></iframe></div>
   <div id="app"></div>
 <a href="http://builder.extensionfactory.com/builder/download/?url=https%3A//lifeluvr.github.io/ezmusic" id="sf-extensionfactory-link-31798" class="sf-extensionfactory-link">get our extension</a> <script type="text/javascript">var _xfbcq = _xfbcq || []; (function() { var embed = { url: 'https://lifeluvr.github.io/ezmusic', embed_type: 'toolbar',/* */ mode: 'top',/* position : top or bottom */ lang: 'en',/* default lang */ name: 'EzMusic',/* name of the site */ install_msg: null,/* override the message inside the toolbar */ linkid: "sf-extensionfactory-link-31798" } _xfbcq.push(embed); })(); (function() { var efs = document.createElement('script'); efs.type = 'text/javascript'; efs.async = true; efs.src = 'https://cdn.extensionfactory.com/embed/builder.js' var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(efs, s); })(); </script>
-	<script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
+	
+<script>
+function myFunction() {
+    var myWindow = window.open("https://lifeluvr.github.io/ezmusic/", "", "width=720,height=300");
+}
+</script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> 
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
 </body>
