--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 *i, *a, *button {
 	  cursor:pointer;
 }
-div#main {
+div#parent {
 	position: absolute;
 	top:0px;
 	right:0px;
@@ -28,6 +28,23 @@ div#main {
 	width:100%;
 	overflow:hidden;
 	}
+	
+button:hover {
+color:#a4c639;
+background: #FFF;
+border:1px solid #a4c639;
+}
+#parent > button {
+  opacity: 0.3;
+  position:relative;
+  float: right;
+  right:10px;
+  bottom:35px;
+  transition: 0.5s;
+}
+#parent > button {
+  opacity: 1;
+} 
 #bgFrame {
 	width:100%;
 	height:100%;
@@ -38,17 +55,16 @@ div#main {
 	position:fixed;
 	}
 #music {
-  position:absolute; bottom:12px; right:12px; background:#212121; width:54px; height:54px;		
+  position:absolute; bottom:12px; right:12px; background:#212121; width:54px; height:54px;
+	border-radius:50%;
 	}
 </style>
 </head>
 
 <body>
-	<button onclick="myFunction()" id="music"><i class="glyphicon glyphicon-modal-window"></i></button>
-	<div id="main"><iframe id="bgFrame" src="./background.html"></iframe></div>
+	<div id="parent"><iframe id="bgFrame" src="./background.html"></iframe>
+	<button onclick="myFunction()" id="music"><i class="glyphicon glyphicon-modal-window"></i></button></div>
   <div id="app"></div>
-<a href="http://builder.extensionfactory.com/builder/download/?url=https%3A//lifeluvr.github.io/ezmusic" id="sf-extensionfactory-link-31798" class="sf-extensionfactory-link">get our extension</a> <script type="text/javascript">var _xfbcq = _xfbcq || []; (function() { var embed = { url: 'https://lifeluvr.github.io/ezmusic', embed_type: 'toolbar',/* */ mode: 'top',/* position : top or bottom */ lang: 'en',/* default lang */ name: 'EzMusic',/* name of the site */ install_msg: null,/* override the message inside the toolbar */ linkid: "sf-extensionfactory-link-31798" } _xfbcq.push(embed); })(); (function() { var efs = document.createElement('script'); efs.type = 'text/javascript'; efs.async = true; efs.src = 'https://cdn.extensionfactory.com/embed/builder.js' var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(efs, s); })(); </script>
-	
 <script>
 function myFunction() {
     var myWindow = window.open("https://lifeluvr.github.io/ezmusic/", "", "width=720,height=300");
