--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@ border:1px solid #a4c639;
 
 <body>
 	<div id="parent"><iframe id="bgFrame" src="./background.html"></iframe>
-	<button onclick="myFunction()" id="music"><i class="glyphicon glyphicon-modal-window"></i></button></div>
-  <div id="app"></div>
+	<button onclick="myFunction()" id="music"><i class="glyphicon glyphicon-modal-window"></i></button>
+	  <div id="app"></div></div>
+  <!--div id="app"></div-->
 <script>
 function myFunction() {
     var myWindow = window.open("https://lifeluvr.github.io/ezmusic/", "", "width=720,height=300");
