--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 *i, *a, *button {
 	  cursor:pointer;
 }
-div#parent {
+#parent {
 	position: absolute;
 	top:0px;
 	right:0px;
@@ -61,8 +61,8 @@ border:1px solid #a4c639;
 <body>
 	<div id="parent"><iframe id="bgFrame" src="./background.html"></iframe>
 	<button onclick="myFunction()" id="music"><i class="glyphicon glyphicon-modal-window"></i></button>
-	  <div id="app"></div></div>
-  <!--div id="app"></div-->
+	  </div>
+  <div id="app"></div>
 <script>
 function myFunction() {
     var myWindow = window.open("https://lifeluvr.github.io/ezmusic/", "", "width=680,height=420");
