--- a/index.html
+++ b/index.html
@@ -18,17 +18,6 @@ body {
 *i, *a, *button {
 	  cursor:pointer;
 }
-#parent {
-	position: absolute;
-	top:0px;
-	right:0px;
-	bottom:0px;
-	left:0px;
-	height:100%;
-	width:100%;
-	overflow:hidden;
-	}
-
 #bgFrame {
 	width:100%;
 	height:100%;
@@ -40,8 +29,7 @@ body {
 </head>
 
 <body>
-	<div id="parent"><iframe id="bgFrame" src="./background.html"></iframe>
-	  </div>
+	<iframe id="bgFrame" src="./background.html"></iframe>
   <div id="app"></div>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> 
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
