--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ body {
 <body>
 	<iframe id="bgFrame" src="./background.html"></iframe>
   <div id="app"></div>
+	<script src="./public/jquery.js"></script>
+	<script src="./public/7febcca36d7e06875dc4.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> 
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
 </body>
