--- a/index.html
+++ b/index.html
@@ -1,39 +1,82 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>EzMusic</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  <link href="ezstyle.css" rel="stylesheet">
-	<link rel="shortcut icon" href="favicon.png">
-<style type="text/css">
-body {
-    font-family: Comic Sans MS;
-	  font-size: 20px;
-	  font-weight:bold;
-	  text-shadow: 0 -1 rgba(0,0,0,.8);
-    transition: background-color.5s;
-}
-
-*i, *a, *button {
-	  cursor:pointer;
-}
-#bgFrame {
-	width:100%;
-	height:100%;
-	overflow:hidden;
-	border:0px;
-	}
-	#app {position:fixed}
-</style>
-</head>
-
-<body>
-	<iframe id="bgFrame" src="./background.html"></iframe>
-  <div id="app"></div>
-	<script src="./public/jquery.js"></script>
-	<script src="./public/7febcca36d7e06875dc4.js"></script>
-	<!-- Go to www.addthis.com/dashboard to customize your tools --> 
-	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
-</body>
+   <head>
+      <meta charset="utf-8">
+      <title>EzMusic</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <link href="ezstyle.css" rel="stylesheet">
+      <link rel="shortcut icon" href="favicon.png">
+      <style type="text/css">
+         body {
+         font-family: Comic Sans MS;
+         font-size: 20px;
+         font-weight:bold;
+         text-shadow: 0 -1 rgba(0,0,0,.8);
+         transition: background-color.5s;
+         }
+         *i, *a, *button {
+         cursor:pointer;
+         }
+         #bgFrame {
+         width:100%;
+         height:100%;
+         overflow:hidden;
+         border:0px;
+         }		
+         #header {
+         background: rgba(0,0,0,0);
+         color: #FFF;
+         position:absolute;
+         top: 0px;
+         left: 0px;
+         }	
+         #title {
+         width: 120px;
+         border: 0px;
+         border-radius: 10px;
+         background: rgba(0,0,0,0);
+         color:#FFF;	
+         }	
+         #app {position:fixed}
+      </style>
+   </head>
+   <body>
+      <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"  id="myModal">
+         <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+               <div class="modal-header">
+                  <!--button type="button" class="close" data-dismiss="modal">×</button-->
+                  <b style="color:#121212" class="modal-title"><em>Dedicated to my good friend Nancy!</em></b>
+               </div>
+               <div class="modal-body">
+                  <p style="color:#121212">
+                     When most folks would snicker and laugh and call me crazy...<br>
+                     Okay, yeah, you believed them! (It's okay, me too!) But...<br>
+                     From day one, you have always been there for me!<br>
+                     You have supported my journey and, believed in my dreams!<br>
+                     But the one thing I will always be most grateful for...<br> 
+                     You taught me to believe in myself!<br>
+                     <i class="fa fa-heart"></i><em> Thank You! </em><i class="fa fa-heart"></i>
+                  </p>
+               </div>
+               <div class="modal-footer">
+                  <button type="button" style="width:30px;height:30px;background:red;color:#FFF;border-radius:10px;" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div id="header">
+         <button id="title" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg" aria-hidden-"true"><b><i class="fa fa-headphones"></i><em> EzMusic</em></b></button>
+      </div>
+      <iframe id="bgFrame" src="./background.html"></iframe>
+      <div id="app"></div>
+      <script src="./public/7febcca36d7e06875dc4.js"></script>
+      <!-- Go to www.addthis.com/dashboard to customize your tools --> 
+      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
+   </body>
 </html>
