--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
          left: 0px;
          }	
          #title {
-         width: 120px;
+         width: 128px;
          border: 0px;
          border-radius: 10px;
          background: #212121;
          color:#FFF;	
+				 margin-top:2px;	
+				 margin-left:2px;								
          }	
+         *p (
+				 color:#212121
+			   }
       </style>
    </head>
    <body>
@@ -39,14 +44,13 @@
             <!-- Modal content-->
             <div class="modal-content">
                <div class="modal-header">
-                  <button type="button" class="close btn-danger" data-dismiss="modal"><i class="fa fa-close-circled"></i></button>
+                  <button type="button" class="close btn-danger" data-dismiss="modal"><i class="fa fa-close"></i></button>
                   <b style="color:#121212" class="modal-title"><em>Links and Options</em></b>
                </div>
                <div class="modal-body">
-                  <p style="color:#212121">
                   <p>Available soon for most devices! The EzMusic App! <a href="https://github.com/lifeluvr/ezmusic">Download <i class="fa fa-download"></i></a></p>
                   <p>Stop by and visit our EzMusic Facebook page! <a href="https://www.facebook.com/dcezmusic/">Facebook <i class="fa fa-facebook"></i></a></p>
-                  <p>This app was brought to you by <a href="https://github.com/lifeluvr/ezmusic">Dunce Cap Software <i class="fa fa-info-circled"></i></a></p>
+                  <p>This app was brought to you by <a href="https://github.com/lifeluvr/ezmusic">Dunce Cap Software <i class="fa fa-info"></i></a></p>
                   <p>You can create a fork of this project at <a href="https://github.com/lifeluvr/ezmusic">Github <i class="fa fa-github"></i></a></p>
                </div>
                <!--div class="modal-footer">
