--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       </style>
    </head>
    <body>
-      <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"  id="myModal">
+      <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="Links and Options" aria-hidden="true"  id="myModal">
          <div class="modal-dialog">
             <!-- Modal content-->
             <div class="modal-content">
                <div class="modal-header">
-                  <button type="button" class="close btn-danger" data-dismiss="modal"><i class="fa fa-close"></i></button>
+                  <button type="button" class="close" data-dismiss="modal"><i class="fa fa-close"></i></button>
                   <b style="color:#121212" class="modal-title"><em>Links and Options</em></b>
                </div>
                <div class="modal-body">
