--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				 margin-top:2px;	
 				 margin-left:2px;								
          }	
-         *p (
+         p (
 				 color:#212121
 			   }
       </style>
@@ -44,8 +44,9 @@
             <!-- Modal content-->
             <div class="modal-content">
                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal"><i class="fa fa-close"></i></button>
-                  <b style="color:#121212" class="modal-title"><em>Links and Options</em></b>
+                  <!--button type="button" class="close" data-dismiss="modal"><i class="fa fa-close"></i></button-->
+                  <b style="color:#121212" class="modal-title"><em> Links and Options </em></b>
+			           <button type="button" style="width:30px;height:30px;background:red;color:#FFF;border-radius:10px;" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
                </div>
                <div class="modal-body">
                   <p>Available soon for most devices! The EzMusic App! <a href="https://github.com/lifeluvr/ezmusic">Download <i class="fa fa-download"></i></a></p>
