--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
 				 margin-top:2px;	
 				 margin-left:2px;								
          }	
-         p (
-				 color:#212121
-			   }
       </style>
    </head>
    <body>
@@ -44,19 +41,15 @@
             <!-- Modal content-->
             <div class="modal-content">
                <div class="modal-header">
-                  <!--button type="button" class="close" data-dismiss="modal"><i class="fa fa-close"></i></button-->
-                  <b style="color:#121212" class="modal-title"><em> Links and Options </em></b>
-			           <button type="button" style="width:30px;height:30px;background:red;color:#FFF;border-radius:10px;" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
+                  <h3 style="color:#212121" class="modal-title"><a href="https://github.com/lifeluvr/ezmusic"><em>Dunce Cap Software</em></a></h3>
+			           <button type="button" style="width:30px;height:30px;background:#212121;color:#FFF;border-radius:10px;" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
                </div>
                <div class="modal-body">
-                  <p>Available soon for most devices! The EzMusic App! <a href="https://github.com/lifeluvr/ezmusic">Download <i class="fa fa-download"></i></a></p>
-                  <p>Stop by and visit our EzMusic Facebook page! <a href="https://www.facebook.com/dcezmusic/">Facebook <i class="fa fa-facebook"></i></a></p>
-                  <p>This app was brought to you by <a href="https://github.com/lifeluvr/ezmusic">Dunce Cap Software <i class="fa fa-info"></i></a></p>
-                  <p>You can create a fork of this project at <a href="https://github.com/lifeluvr/ezmusic">Github <i class="fa fa-github"></i></a></p>
+									<p style="color:#212121">"Learning every thing the hard way so you don't have to!"</p>										
+                  <b style="color:#212121">Available soon for most devices! The EzMusic App! <a href="https://github.com/lifeluvr/ezmusic">Download <i class="fa fa-download"></i></a></b>
+                  <b style="color:#212121">Stop by and visit our EzMusic Facebook page! <a href="https://www.facebook.com/dcezmusic/">Facebook <i class="fa fa-facebook"></i></a></b>
+                  <b style="color:#212121">You can create a fork of this project at <a href="https://github.com/lifeluvr/ezmusic">Github <i class="fa fa-github"></i></a></b>
                </div>
-               <!--div class="modal-footer">
-                  <button type="button" style="width:30px;height:30px;background:red;color:#FFF;border-radius:10px;" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
-                  </div-->
             </div>
          </div>
       </div>
