--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- Modal content-->
             <div class="modal-content">
                <div class="modal-header">
-                  <h3 style="color:#212121" class="modal-title"><a href="https://github.com/lifeluvr/ezmusic"><em>Dunce Cap Software</em></a></h3>
+                  <h4 style="color:#212121" class="modal-title"><a href="https://github.com/lifeluvr/ezmusic"><em>Dunce Cap Software</em></a></h>
 			           <button type="button" style="width:30px;height:30px;background:#212121;color:#FFF;border-radius:10px;" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
                </div>
                <div class="modal-body">
