--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
             <div class="modal-content">
                <div class="modal-header">
                   <h4 style="color:#212121" class="modal-title"><a href="https://github.com/lifeluvr/ezmusic"><em>Dunce Cap Software</em></a></h>
-			           <button type="button" style="width:30px;height:30px;background:#212121;color:#FFF;border-radius:10px;" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
+			           <button type="button" style="float:right;width:30px;height:30px;background:#212121;color:#FFF;border-radius:10px;" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
                </div>
                <div class="modal-body">
-									<p style="color:#212121">"Learning every thing the hard way so you don't have to!"</p>										
-                  <b style="color:#212121">Available soon for most devices! The EzMusic App! <a href="https://github.com/lifeluvr/ezmusic">Download <i class="fa fa-download"></i></a></b>
-                  <b style="color:#212121">Stop by and visit our EzMusic Facebook page! <a href="https://www.facebook.com/dcezmusic/">Facebook <i class="fa fa-facebook"></i></a></b>
+									<p style="color:#212121">"Learning every thing the hard way so you don't have to!"</p><br>										
+                  <b style="color:#212121">Available soon for most devices! The EzMusic App! <a href="https://github.com/lifeluvr/ezmusic">Download <i class="fa fa-download"></i></a></b><br>
+                  <b style="color:#212121">Stop by and visit our EzMusic Facebook page! <a href="https://www.facebook.com/dcezmusic/">Facebook <i class="fa fa-facebook"></i></a></b><br>
                   <b style="color:#212121">You can create a fork of this project at <a href="https://github.com/lifeluvr/ezmusic">Github <i class="fa fa-github"></i></a></b>
                </div>
             </div>
