--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="modal-content">
                <div class="modal-header">
                   <h4 style="color:#212121" class="modal-title"><a href="https://github.com/lifeluvr/ezmusic"><em>Dunce Cap Software</em></a></h>
-			           <button type="button" style="float:right;width:30px;height:30px;background:#212121;color:#FFF;border-radius:10px;" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
+			           <button type="button" style="float:right;background:#212121;color:#FFF;border-radius:10px;" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
                </div>
                <div class="modal-body">
 									<p style="color:#212121">"Learning every thing the hard way so you don't have to!"</p><br>										
