--- a/index.html
+++ b/index.html
@@ -4,36 +4,11 @@
       <meta charset="utf-8">
       <title>EzMusic</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="./public/font-awesome.min.css">
       <link rel="stylesheet"./public/bootstrap.min.css">
       <script src="./public/jquery.min.js"></script>
       <script src="./public/bootstrap.min.js"></script>
-      <link href="./public/b124bec3d66a2331e286f87298716c24.css" rel="stylesheet">
-      <style type="text/css">
-         body {
-         font-family: Comic Sans MS;
-         font-size: 16px;
-         font-weight:bold;
-         text-shadow: 0 -1 rgba(0,0,0,.8);
-         transition: background-color.5s;
-         }
-         #header {
-         background: rgba(0,0,0,0);
-         color: #FFF;
-         position:absolute;
-         top: 0px;
-         left: 0px;
-         }	
-         #title {
-         width: 128px;
-         border: 0px;
-         border-radius: 10px;
-         background: #212121;
-         color:#FFF;	
-				 margin-top:2px;	
-				 margin-left:2px;								
-         }	
-      </style>
+      <link href="ezmusic.css" rel="stylesheet">
    </head>
    <body>
       <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="Links and Options" aria-hidden="true"  id="myModal">
