--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
       <meta charset="utf-8">
       <title>EzMusic</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="./public/font-awesome.min.css">
-      <link rel="stylesheet"./public/bootstrap.min.css">
-      <script src="./public/jquery.min.js"></script>
-      <script src="./public/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="public/font-awesome.min.css">
+      <link rel="stylesheet"public/bootstrap.min.css">
+      <script src="public/jquery.min.js"></script>
+      <script src="public/bootstrap.min.js"></script>
       <link href="ezmusic.css" rel="stylesheet">
    </head>
    <body>
@@ -32,7 +32,7 @@
          <button id="title" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg" aria-hidden-"true"><b><i class="fa fa-headphones"></i><em> EzMusic</em></b></button>
       </div>
       <div id="app"></div>
-      <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
+      <script type="text/javascript" src="public/7febcca36d7e06875dc4.js"></script>
       <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script>
    </body>
 </html>
