--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
    <head>
       <meta charset="utf-8">
       <title>EzMusic</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="public/font-awesome.min.css">
-      <link rel="stylesheet"public/bootstrap.min.css">
-      <script src="public/jquery.min.js"></script>
-      <script src="public/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <link href="ezmusic.css" rel="stylesheet">
    </head>
    <body>
