--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <link href="ezmusic.css" rel="stylesheet">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
+  <link href="./public/c18ee732f991dc234ab539e0cf7f4e3f.css" rel="stylesheet">
+	<link rel="shortcut icon" href="favicon.png">
    </head>
    <body>
       <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="Links and Options" aria-hidden="true"  id="myModal">
