--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
       <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
-  <link href="./public/c18ee732f991dc234ab539e0cf7f4e3f.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
+  <!--link href="./public/c18ee732f991dc234ab539e0cf7f4e3f.css" rel="stylesheet"-->
+	<link rel="stylesheet" href="ezstyle.css">	 
 	<link rel="shortcut icon" href="favicon.png">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+		 <style>
+			 iframe {
+				 height:100%;
+				 width:100%;
+			   position:absolute;
+				 top:0;
+				 right:0;
+				 bottom:0;
+				 left:0;
+			 }
    </head>
    <body>
+		 <iframe id="bgFrame" src="./public/background.html"></iframe>
       <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="Links and Options" aria-hidden="true"  id="myModal">
          <div class="modal-dialog">
             <!-- Modal content-->
@@ -33,9 +45,6 @@
          <button id="title" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg" aria-hidden-"true"><b><i class="fa fa-headphones"></i><em> EzMusic</em></b></button>
       </div>
       <div id="app"></div>
-		  
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <script type="text/javascript" src="public/7febcca36d7e06875dc4.js"></script>
       <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script>
    </body>
