--- a/index.html
+++ b/index.html
@@ -12,27 +12,49 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 		 <style>
-			 iframe {
-				 height:100%;
-				 width:100%;
-			   position:absolute;
-				 top:0;
-				 right:0;
-				 bottom:0;
-				 left:0;
-			 }
-			 b, p {
+			 
+         body {
+         font-family: Comic Sans MS;
+         font-size: 14px;
+         font-weight:bold;
+         text-shadow: 0 -1 rgba(0,0,0,.8);
+         transition: background-color.5s;
+         }
+         *i, *a, *button {
+         cursor:pointer;
+         }
+         #bgFrame {
+         width:100%;
+         height:100%;
+         overflow:hidden;
+         border:0px;
+         }		
+         #header {
+         background: rgba(0,0,0,0);
+         color: #FFF;
+         position:absolute;
+         top: 0px;
+         left: 0px;
+         }	
+         #title {
+         width: 120px;
+         border: 0px;
+         border-radius: 10px;
+         background: rgba(0,0,0,0);
+         color:#FFF;	
+         }	
+			 b, p, h4 {
 			   color:#212121;
 			 }
    </head>
    <body>
-		 <iframe id="bgFrame" src="./public/background.html"></iframe>
+		 <iframe id="bgFrame" src="public/background.html"></iframe>
       <div class="modal fade modal-lg" tabindex="-1" role="dialog" aria-labelledby="Links and Options" aria-hidden="true"  id="myModal">
          <div class="modal-dialog">
             <!-- Modal content-->
             <div class="modal-content">
                <div class="modal-header">
-                  <h4 style="color:#212121" class="modal-title"><a href="https://github.com/lifeluvr/ezmusic"><em>Dunce Cap Software</em></a></h>
+                  <h4 class="modal-title"><a href="https://github.com/lifeluvr/ezmusic"><em>Dunce Cap Software</em></a></h>
 			           <button type="button" style="float:right;" class="close" data-dismiss="modal" aria-hidden="true"><i style="color:red;" class="fa fa-close"></i></button>
                </div>
                <div class="modal-body">
