--- a/public/background.html
+++ b/public/background.html
@@ -1,12 +1,10 @@
 <html><head>
-	<meta charset="utf-8">
-	
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
-	
-	<script src="https://cdn.pubnub.com/pubnub.min.js"></script>
-	<title>Twitter Matrix</title>
-	<style>
+	<meta charset="utf-8">      
+  <meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<script src="https://cdn.pubnub.com/pubnub.min.js"></script>
+		<title>Twitter Matrix</title>
+		<style>
 		@font-face {
 		    font-family: 'Unifont';
 		    src: url('unifont.eot');
@@ -20,12 +18,10 @@
 		body { background: black; font-family: "Unifont"; }
 		canvas { display: block; }
 	</style>
-<link id="noteanywherecss" media="screen" type="text/css" rel="stylesheet" href="data:text/css,.note-anywhere%20.closebutton%7Bbackground-image%3A%20url%28chrome-extension%3A//bohahkiiknkelflnjjlipnaeapefmjbh/asset/deleteButton.png%29%3B%7D%0A"></head>
-
-<body>
-	<canvas id="c" height="680" width="1280"></canvas>
-	
-	<script>
+	</head>
+	<body>
+		<canvas id="c" height="680" width="1280"></canvas>
+		<script>
 		// based on
 		// https://codepen.io/P3R0/pen/MwgoKv
 		// https://www.pubnub.com/developers/realtime-data-streams/twitter-stream/
@@ -165,8 +161,7 @@
 					twitterMessages.push(msg.text);
 			}
 		});
-	</script>
-
-
-
-</body></html>
+	
+		</script>
+</body>
+</html>
