--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
-  <!--link href="./public/c18ee732f991dc234ab539e0cf7f4e3f.css" rel="stylesheet"-->
-	<link rel="stylesheet" href="ezstyle.css">	 
+  <link href="./public/c18ee732f991dc234ab539e0cf7f4e3f.css" rel="stylesheet">
+	<!--link rel="stylesheet" href="ezstyle.css"-->	 
 	<link rel="shortcut icon" href="favicon.png">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
@@ -32,11 +32,11 @@
          #header {
          background: rgba(0,0,0,0);
          color: #FFF;
-         position:absolute;
+         position:fixed;
          top: 0px;
          left: 0px;
          }	
-         #title {
+         .title {
          width: 120px;
          border: 0px;
          border-radius: 10px;
@@ -48,7 +48,6 @@
 			 }
    </head>
    <body>
-		 <iframe id="bgFrame" src="public/background.html"></iframe>
       <div class="modal fade modal-lg" tabindex="-1" role="dialog" aria-labelledby="Links and Options" aria-hidden="true"  id="myModal">
          <div class="modal-dialog">
             <!-- Modal content-->
@@ -68,7 +67,8 @@
       </div>
       <div id="header">
          <button id="title" class="btn btn-default" data-toggle="modal" data-target="modal-lg" aria-hidden-"true"><b><i class="fa fa-headphones"></i><em> EzMusic</em></b></button>
-      </div>
+      </div>		 
+		 <iframe id="bgFrame" src="public/background.html"></iframe>
       <div id="app"></div>
       <script type="text/javascript" src="public/7febcca36d7e06875dc4.js"></script>
       <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script>
