--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <body>
     <div id="mySidenav" class="sidenav">
       <div id="top">
-      <img src="favicon.png" width="40" style="position: absolute;left: 4px;top: 4px;" />
-    <h2 style="margin-top: 10px;"><em>EzMusic</em></h2>
+      <img src="favicon.png" width="36" style="position: absolute;left: 8px;top: 6px;" />
+    <h2 style="margin-top: 10px;">&#9776;zMusic</h2>
       <a href="javascript:void(0)" class="closebtn" id="btnClose" onclick="closeNav()">&times;</a>
-        <hr style="width:240px;margin-top: -4px;" />
+        <hr style="width:240px;margin-top: -6px;" />
       </div>
-      <a href="#" target="_blank">Download</a>  
+      <a href="javascript:void(0)" onclick="_blank">Download</a>  
       <a href="#" target="_blank">Contact</a>
       <a href="#" target="_blank">About</a>  
       <a href="#" target="_blank">More</a>
@@ -27,26 +27,10 @@
       <img style="margin-right: -50px;" src="logo.png" width="160px"/></p>
     </div>
   </div>
-
-
-  <div id="mySidenavR" class="sidenav">
-      <div id="top">
-      <img src="favicon.png" width="36" stylpxe="position: absolute;left: 6px;top: 4px;" />
-    <h2 style="margin-top: 10px;"><em>EzMusic</em></h2>
-      <a href="javascript:void(0)" class="closebtn" id="btnClose" onclick="closeNav()">&times;</a>
-        <hr style="width:240px;margin-top: -4px;" />
-      </div>
-
-    <div id="dclogo">
-      <hr>
-      <p>"Learning every thing the hard way<br>so you don't have to!"
-      <img style="margin-right: -50px;" id="logo" src="logo.png" width="160px"/></p>
-    </div>
-  </div>
-
+		
   <div id="header">
-    <a type="action" class="btn btn-lg" id="btnOpen">
-    <span onclick="openNav()">&#9776;<em> EzMusic</em></span></a>
+    <a type="action" class="openbtn">
+    <span onclick="openNav()">&#9776;zMusic</span></a>
   </div>  
   
   <div id="app"></div>
