--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
   <meta charset="utf-8">
   <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./public/css/bootstrap.min.css">
   <link rel="stylesheet" href="./public/c18ee732f991dc234ab539e0cf7f4e3e.css">
   <link rel="shortcut icon" href="favicon.png">
 </head>
   <body>
     <div id="mySidenav" class="sidenav">
       <div id="top">
-      <img src="favicon.png" width="36" style="position: absolute;left: 8px;top: 6px;" />
-    <h2 style="margin-top: 10px;">&#9776;zMusic</h2>
-      <a href="javascript:void(0)" class="closebtn" id="btnClose" onclick="closeNav()">&times;</a>
-        <hr style="width:240px;margin-top: -6px;" />
+				<p><img src="favicon.png" width="32"/> &#9776;zMusic</p>
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <hr style="margin-top: -6px;" />
       </div>
       <a href="javascript:void(0)" onclick="_blank">Download</a>  
       <a href="#" target="_blank">Contact</a>
@@ -24,7 +21,7 @@
     <div id="dclogo">
       <hr>
       <p>"Learning every thing the hard way<br>so you don't have to!"
-      <img style="margin-right: -50px;" src="logo.png" width="160px"/></p>
+      <img style="margin-right: -60px;" src="logo.png" width="140px"/></p>
     </div>
   </div>
 		
@@ -34,10 +31,6 @@
   </div>  
   
   <div id="app"></div>
-
-  <script type="text/javascript" src="./public/js/jquery.min.js"></script>
-  <script type="text/javascript" src="./public/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
   <script type="text/javascript">
 function openNav() {
     document.getElementById("mySidenav").style.width = "260px";
@@ -57,6 +50,7 @@ $(document).ready(function(){
     });
 });
 </script> 
+  <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
 <!-- Go to www.addthis.com/dashboard to customize your tools --> 
  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
 </body>
