--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="mySidenav" class="sidenav">
       <div id="top">
-				<p><img src="favicon.png" width="32"/> &#9776;zMusic</p>
+				<big><img src="favicon.png" width="32"/> &#9776;zMusic</big>
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <hr style="margin-top: -6px;" />
       </div>
@@ -27,7 +27,7 @@
 		
   <div id="header">
     <a type="action" class="openbtn">
-    <span onclick="openNav()">&#9776;zMusic</span></a>
+    <span onclick="openNav()"><img src="favicon.png" width="32"/> &#9776;zMusic</span></a>
   </div>  
   
   <div id="app"></div>
